--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Fancy Color Palette (Modern UI Look) -->
+    <color name="colorPrimary">#673AB7</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="gradientStart">#7E57C2</color>
+    <color name="gradientEnd">#AB47BC</color>
+    <color name="textDark">#212121</color>
+    <color name="textLight">#FFFFFF</color>
+    <color name="background">#F3E5F5</color>
+
+    <!-- Default colors, can be removed or kept for reference -->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
